--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.65",
-    "@types/react": "^18.2.38",
-    "@types/react-dom": "^18.2.17",
+    "@types/react-bootstrap": "^0.32.35",
+    "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.0",
+    "datatables.net": "^1.13.8",
+    "jquerry": "^0.0.1-security",
+    "jquery": "^3.7.1",
+    "mdi": "^2.2.43",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
@@ -27,6 +33,7 @@
       "react-app",
       "react-app/jest"
     ]
+    
   },
   "browserslist": {
     "production": [
@@ -39,5 +46,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/jquery": "^3.5.29",
+    "@types/react": "^18.2.38",
+    "@types/react-dom": "^18.2.17"
   }
 }
